fixed italic not being italic on mobile

--- a/src/css/imports/typography.css
+++ b/src/css/imports/typography.css
@@ -79,6 +79,7 @@ p {
 
 a {
   font-family: var(--serif-italic);
+  font-style: italic;
   color: var(--primary);
   text-decoration: none;
   font-size: 1.6rem;
